# CrunchyMurmur

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  SUPPORT.md  TERMS.md  install.ps1  install.sh  package-lock.json  package.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: README.md
docs/: README.md  THIRD_PARTY_NOTICES.md  architecture.md  building-from-source.md  features.md  getting-started.md  platform-support.md  releasing.md  troubleshooting.md  updating.md
native/transcriber/: Cargo.toml
native/transcriber/src/: main.rs
scripts/: after-pack.js  build-brand-assets.py  build-editor.js  build-macos-native.sh  check-doc-links.js  check-i18n.js  check-js.js  check-release.js  check-repository-links.js  dev-macos-permissions.js  ensure-macos-native.js  generate-i18n-catalog.js  normalize-linux-artifacts.js  prepare-linux-icons.sh  prepare-macos-icon.sh  prepare-release-version.js  prepare-transcriber-runtime.js  prepare-whisper-runtime.js  release-version.js  smoke-packaged.js  verify-macos-package-runtimes.js  verify-update-manifest.js
site/: .gitignore  README.md  app.js  docs.html  docs.js  generate-i18n.js  i18n-catalog.js  index.html  package.json  server.js  styles.css
src/: audio-quality.js  calendar-store.js  dictation-formatter.js  dictation-stats.js  file-utils.js  groq.js  history.js  hotkey-manager.js  hotkey.js  local-transcription-service.js  mac-native.js  main.js  meeting-transcriber.js  meetings-store.js  paste.js  (+15 more)
(+53 files in other folders)
