[package]
name = "crunchymurmur-transcriber"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Bundled local transcription helper for CrunchyMurmur"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
transcribe-rs = { version = "=0.3.11", features = ["onnx"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
